--- a/GkTypesLibTests/GkTypesLibTests.vcxproj
+++ b/GkTypesLibTests/GkTypesLibTests.vcxproj
@@ -19,12 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\ConstexprTests\BitsetTests.cpp" />
     <ClCompile Include="Source\ConstexprTests\DynamicArrayTests.cpp" />
     <ClCompile Include="Source\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ConstexprTests\ConstexprTestUnitTest.h" />
-    <ClInclude Include="Source\TestConstChar.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
