--- a/GkTypesLibTests/GkTypesLibTests.vcxproj.filters
+++ b/GkTypesLibTests/GkTypesLibTests.vcxproj.filters
@@ -24,9 +24,15 @@
     <ClCompile Include="Source\ConstexprTests\BitsetTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ConstexprTests\StringTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\ConstexprTests\ConstexprTestUnitTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\OldString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
