--- a/GkTypesLib/GkTypesLib.vcxproj
+++ b/GkTypesLib/GkTypesLib.vcxproj
@@ -25,6 +25,8 @@
     <ClInclude Include="GkTypes\ClassRef\ClassRef.h" />
     <ClInclude Include="GkTypes\File\FileLoader.h" />
     <ClInclude Include="GkTypes\GkTypesLib.h" />
+    <ClInclude Include="GkTypes\Hashmap\Hash.h" />
+    <ClInclude Include="GkTypes\Hashmap\Hashmap.h" />
     <ClInclude Include="GkTypes\String\GlobalString.h" />
     <ClInclude Include="GkTypes\String\String.h" />
     <ClInclude Include="GkTypes\Thread\Thread.h" />
