Thread Unit Tests

--- a/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
+++ b/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClCompile Include="Tests\ClassRefUnitTests.cpp" />
     <ClCompile Include="Tests\DynamicArrayUnitTests.cpp" />
     <ClCompile Include="Tests\BitsetUnitTests.cpp" />
+    <ClCompile Include="Tests\ThreadUnitTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
