--- a/GkTypesLibTesting/GkTypesLibTesting.vcxproj
+++ b/GkTypesLibTesting/GkTypesLibTesting.vcxproj
@@ -46,6 +46,7 @@
     <ClCompile Include="Tests\BitsetUnitTests.cpp" />
     <ClCompile Include="Tests\ClassRefUnitTests.cpp" />
     <ClCompile Include="Tests\DynamicArrayUnitTests.cpp" />
+    <ClCompile Include="Tests\ThreadUnitTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
