AVX2 Enhanced Comparison Checking

--- a/GkTypesLib/GkTypesLib.vcxproj.filters
+++ b/GkTypesLib/GkTypesLib.vcxproj.filters
@@ -54,5 +54,11 @@
     <ClInclude Include="GkTypes\Hashmap\Hash.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GkTypes\String\NewString.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GkTypes\Core.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
