--- a/GkTypesLib/GkTypesLib.vcxproj
+++ b/GkTypesLib/GkTypesLib.vcxproj
@@ -23,11 +23,13 @@
     <ClInclude Include="GkTypes\BasicTypes.h" />
     <ClInclude Include="GkTypes\Bitset\Bitset.h" />
     <ClInclude Include="GkTypes\ClassRef\ClassRef.h" />
+    <ClInclude Include="GkTypes\Core.h" />
     <ClInclude Include="GkTypes\File\FileLoader.h" />
     <ClInclude Include="GkTypes\GkTypesLib.h" />
     <ClInclude Include="GkTypes\Hashmap\Hash.h" />
     <ClInclude Include="GkTypes\Hashmap\Hashmap.h" />
     <ClInclude Include="GkTypes\String\GlobalString.h" />
+    <ClInclude Include="GkTypes\String\NewString.h" />
     <ClInclude Include="GkTypes\String\String.h" />
     <ClInclude Include="GkTypes\Thread\Thread.h" />
     <ClInclude Include="GkTypes\Thread\ThreadPool.h" />
