--- a/GkTypesLib/GkTypesLib.vcxproj.filters
+++ b/GkTypesLib/GkTypesLib.vcxproj.filters
@@ -60,5 +60,8 @@
     <ClInclude Include="GkTypes\Core.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GkTypes\Asserts.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
