--- a/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
+++ b/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
@@ -10,10 +10,12 @@
     <ClCompile Include="Tests\ThreadPoolUnitTests.cpp" />
     <ClCompile Include="Utility\EnglishWords.cpp" />
     <ClCompile Include="Tests\StringTests.cpp" />
+    <ClCompile Include="GkTest.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Utility\EnglishWords.h" />
+    <ClInclude Include="GkTest.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
