--- a/GkTypesLib/GkTypesLib.vcxproj
+++ b/GkTypesLib/GkTypesLib.vcxproj
@@ -25,6 +25,7 @@
     <ClInclude Include="GkTypes\Bitset\Bitset.h" />
     <ClInclude Include="GkTypes\ClassRef\ClassRef.h" />
     <ClInclude Include="GkTypes\Core.h" />
+    <ClInclude Include="GkTypes\Event\Event.h" />
     <ClInclude Include="GkTypes\File\FileLoader.h" />
     <ClInclude Include="GkTypes\GkTypesLib.h" />
     <ClInclude Include="GkTypes\Hashmap\Hash.h" />
