--- a/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
+++ b/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
@@ -13,6 +13,7 @@
     <ClCompile Include="GkTest.cpp" />
     <ClCompile Include="Utility\Benchmark.cpp" />
     <ClCompile Include="Tests\EventTests.cpp" />
+    <ClCompile Include="Tests\FunctionPointerTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
