--- a/GkTypesLibTesting/GkTypesLibTesting.vcxproj
+++ b/GkTypesLibTesting/GkTypesLibTesting.vcxproj
@@ -52,11 +52,14 @@
     <ClCompile Include="GkTest.cpp" />
     <ClCompile Include="Tests\EventTests.cpp" />
     <ClCompile Include="Tests\FunctionPointerTests.cpp" />
+    <ClCompile Include="Tests\JobSystemUnitTests.cpp" />
+    <ClCompile Include="Tests\MutexTests.cpp" />
     <ClCompile Include="Tests\OptionUnitTests.cpp" />
     <ClCompile Include="Tests\RingQueueTests.cpp" />
-    <ClCompile Include="Tests\StringTests.cpp" />
+    <ClCompile Include="Tests\StringUnitTests.cpp" />
     <ClCompile Include="Tests\ThreadPoolUnitTests.cpp" />
     <ClCompile Include="Tests\ThreadUnitTests.cpp" />
+    <ClCompile Include="Tests\Utf8StrUnitTests.cpp" />
     <ClCompile Include="Utility\Benchmark.cpp" />
     <ClCompile Include="Utility\EnglishWords.cpp" />
   </ItemGroup>
