--- a/GkTypesLib/GkTypesLib.vcxproj
+++ b/GkTypesLib/GkTypesLib.vcxproj
@@ -25,16 +25,26 @@
     <ClInclude Include="GkTypes\Bitset\Bitset.h" />
     <ClInclude Include="GkTypes\ClassRef\ClassRef.h" />
     <ClInclude Include="GkTypes\Core.h" />
+    <ClInclude Include="GkTypes\CpuFeatures\CpuFeatureDetector.h" />
     <ClInclude Include="GkTypes\Event\Event.h" />
     <ClInclude Include="GkTypes\File\FileLoader.h" />
     <ClInclude Include="GkTypes\GkTypesLib.h" />
     <ClInclude Include="GkTypes\Hashmap\Hash.h" />
     <ClInclude Include="GkTypes\Hashmap\Hashmap.h" />
+    <ClInclude Include="GkTypes\Job\JobInfo.h" />
+    <ClInclude Include="GkTypes\Job\JobSystem.h" />
+    <ClInclude Include="GkTypes\Job\JobThread.h" />
     <ClInclude Include="GkTypes\Option\Option.h" />
+    <ClInclude Include="GkTypes\Error\Result.h" />
+    <ClInclude Include="GkTypes\Queue\RingQueue.h" />
     <ClInclude Include="GkTypes\String\GlobalString.h" />
-    <ClInclude Include="GkTypes\String\String.h" />
+    <ClInclude Include="GkTypes\String\Str.h" />
+    <ClInclude Include="GkTypes\Thread\Mutex.h" />
     <ClInclude Include="GkTypes\Thread\Thread.h" />
     <ClInclude Include="GkTypes\Thread\ThreadPool.h" />
+    <ClInclude Include="GkTypes\Error\Error.h" />
+    <ClInclude Include="GkTypes\String\String.h" />
+    <ClInclude Include="GkTypes\String\Utf8.h" />
     <ClInclude Include="GkTypes\Utility.h" />
     <ClInclude Include="GkTypes\Function\Fptr.h" />
   </ItemGroup>
