--- a/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
+++ b/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClCompile Include="Tests\Utf8StrUnitTests.cpp" />
     <ClCompile Include="Tests\MutexTests.cpp" />
     <ClCompile Include="Tests\JobSystemUnitTests.cpp" />
+    <ClCompile Include="Tests\HashMapTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
