--- a/GkTypesLib/GkTypesLib.vcxproj.filters
+++ b/GkTypesLib/GkTypesLib.vcxproj.filters
@@ -99,5 +99,11 @@
     <ClInclude Include="GkTypes\Thread\Mutex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GkTypes\Thread\ThreadEnums.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GkTypes\Thread\RwLock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
