--- a/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
+++ b/GkTypesLibTesting/GkTypesLibTesting.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClCompile Include="Tests\JobSystemUnitTests.cpp" />
     <ClCompile Include="Tests\HashMapTests.cpp" />
     <ClCompile Include="Tests\GlobalStringUnitTests.cpp" />
+    <ClCompile Include="Tests\RwLockUnitTests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
