--- a/GkTypesLibTesting/GkTypesLibTesting.vcxproj
+++ b/GkTypesLibTesting/GkTypesLibTesting.vcxproj
@@ -46,6 +46,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Tests\ArrayListUnitTests.cpp" />
     <ClCompile Include="Tests\BitsetUnitTests.cpp" />
     <ClCompile Include="Tests\ClassRefUnitTests.cpp" />
     <ClCompile Include="Tests\DynamicArrayUnitTests.cpp" />
@@ -55,6 +56,7 @@
     <ClCompile Include="Tests\GlobalStringUnitTests.cpp" />
     <ClCompile Include="Tests\HashMapTests.cpp" />
     <ClCompile Include="Tests\JobSystemUnitTests.cpp" />
+    <ClCompile Include="Tests\JobThreadUnitTests.cpp" />
     <ClCompile Include="Tests\MutexTests.cpp" />
     <ClCompile Include="Tests\OptionUnitTests.cpp" />
     <ClCompile Include="Tests\RingQueueTests.cpp" />
